feat: adds swagger
