# herodotos/herodotos-swagger.yaml
@@ -14,8 +14,10 @@ basePath: "/Herodotos/v1"
 tags:
   - name: "health"
     description: "Endpoints relating to health and checks"
-  - name: "multi"
-    description: "Endpoints relating to getting multi-choice questions and answers"
+  - name: "text"
+    description: "Endpoints relating to getting text based questions"
+  - name: "author"
+    description: "Endpoints relating to authors"
 schemes:
   - "http"
 paths:
@@ -52,58 +54,19 @@ paths:
         "200":
           description: "successful operation"
           schema:
-            $ref: "#/definitions/Health"
-  /chapters/{category}:
-    get:
-      tags:
-        - "multi"
-      parameters:
-        - name: "category"
-          in: "path"
-          description: "category to find the number of chapters in"
-          required: true
-          type: "string"
-      summary: "Get chapter count for category"
-      description: "Max chapters per category"
-      consumes:
-        - "application/json"
-      produces:
-        - "application/json"
-      responses:
-        "200":
-          description: "successful operation"
-          schema:
-            $ref: "#/definitions/LastChapterResponse"
-        "400":
-          description: "method not allowed"
-          schema:
-            $ref: "#/definitions/ValidationError"
-        "404":
-          description: "not found"
-          schema:
-            $ref: "#/definitions/NotFoundError"
-        "405":
-          description: "method not allowed"
-          schema:
-            $ref: "#/definitions/MethodNotAllowedError"
+            $ref: "#/definitions/Ping"
   /createQuestion:
     get:
       tags:
-        - "multi"
+        - "text"
       parameters:
-        - name: "category"
+        - name: "author"
           in: "query"
-          description: "category to find the number of chapters in"
+          description: "author to use"
           required: true
           type: "string"
-        - name: "chapter"
-          in: "query"
-          description: "chapter to create a question for"
-          required: true
-          type: "integer"
-          format: "int64"
-      summary: "Get a new question"
-      description: "Based on a category and a chapter this endpoint creates a question"
+      summary: "Get a new sentence"
+      description: "Based on an author this endpoint returns a setence"
       consumes:
         - "application/json"
       produces:
@@ -112,7 +75,7 @@ paths:
         "200":
           description: "successful operation"
           schema:
-            $ref: "#/definitions/CreateQuestionResponse"
+            $ref: "#/definitions/CreateSentenceResponse"
         "400":
           description: "method not allowed"
           schema:
@@ -121,19 +84,12 @@ paths:
           description: "method not allowed"
           schema:
             $ref: "#/definitions/MethodNotAllowedError"
-  /answer:
-    post:
+  /authors:
+    get:
       tags:
-        - "multi"
-      parameters:
-        - in: "body"
-          name: "body"
-          description: "Pet object that needs to be added to the store"
-          required: true
-          schema:
-            $ref: "#/definitions/CheckAnswerRequest"
-      summary: "Get a new question"
-      description: "Based on a category and a chapter this endpoint creates a question"
+        - "author"
+      summary: "Return the stored authors"
+      description: "Returns an array of authors that have sentences attached"
       consumes:
         - "application/json"
       produces:
@@ -142,7 +98,33 @@ paths:
         "200":
           description: "successful operation"
           schema:
-            $ref: "#/definitions/CheckAnswerResponse"
+            $ref: "#/definitions/Authors"
+        "405":
+          description: "method not allowed"
+          schema:
+            $ref: "#/definitions/MethodNotAllowedError"
+  /checkSentence:
+    post:
+      tags:
+        - "text"
+      parameters:
+        - in: "body"
+          name: "body"
+          description: "Sentence that needs to be checked"
+          required: true
+          schema:
+            $ref: "#/definitions/CheckSentenceRequest"
+      summary: "Check the sentence"
+      description: "Takes the given sentence and checks the levenshtein distance for the sentence and per word"
+      consumes:
+        - "application/json"
+      produces:
+        - "application/json"
+      responses:
+        "200":
+          description: "successful operation"
+          schema:
+            $ref: "#/definitions/CheckSentenceResponse"
         "400":
           description: "method not allowed"
           schema:
@@ -152,6 +134,7 @@ paths:
           schema:
             $ref: "#/definitions/MethodNotAllowedError"
 
+
 definitions:
   Ping:
     type: "object"
@@ -159,46 +142,93 @@ definitions:
       result:
         type: "string"
         example: "pong"
-  Health:
+  CreateSentenceResponse:
     type: "object"
     properties:
-      test:
+      sentence:
         type: "string"
-      test2:
-        type: "integer"
-        format: "int64"
-  LastChapterResponse:
-    type: "object"
-    properties:
-      lastChapter:
-        type: "integer"
-        format: "int64"
-        example: 5
-  CreateQuestionResponse:
-    type: "object"
-    properties:
-      lastChapter:
-        type: "integer"
-        format: "int64"
-        example: 5
-  CheckAnswerRequest:
-    type: "object"
-    properties:
-      quizWord:
+        example: "Ἡροδότου Ἁλικαρνησσέος ἱστορίης ἀπόδεξις ἥδε"
+      sentenceId:
         type: "string"
-        example: "τὸ αγαθών"
-      answerProvided:
-        type: "string"
-        example: "het goede"
-      category:
-        type: "string"
-        example: "logos"
-  CheckAnswerResponse:
+        description: "elastic _id"
+        example: "LzxmXHkB8kAluuS8mCqs"
+  Authors:
+    type: "array"
+    items:
+      $ref: "#/definitions/Author"
+  Author:
     type: "object"
     properties:
-      correct:
-        type: "boolean"
-        example: true
+      author:
+        type: "string"
+        example: "herodotos"
+  CheckSentenceRequest:
+    type: "object"
+    properties:
+      answerSentence:
+        type: "string"
+        example: "The Foenicians. ;came to Argos,,.;:'' af"
+      sentenceId:
+        type: "string"
+        example: "LjxmXHkB8kAluuS8mCoN"
+      author:
+        type: "string"
+        example: "herodotos"
+  CheckSentenceResponse:
+    type: "object"
+    properties:
+      levenshteinPercentage:
+        type: "string"
+        example: "51.85"
+      quizSentence:
+        type: "string"
+        example: "The Phoenicians came to Argos, and set out their cargo"
+      answerSentence:
+        type: "string"
+        example: "The Foenicians. ;came to Argos,,.;:'' af"
+      splitQuizSentence:
+        type: "array"
+        items:
+          type: "string"
+        example: ["one", "two"]
+      splitAnswerSentence:
+        type: "array"
+        items:
+          type: "string"
+        example: ["one", "two"]
+      matchingWords:
+        type: "array"
+        items:
+          $ref: "#/definitions/MatchingWord"
+      nonMatchingWords:
+        type: "array"
+        items:
+          $ref: "#/definitions/NonMatchingWord"
+  MatchingWord:
+    type: "object"
+    properties:
+      word:
+        type: "string"
+        example: "Phoenicians"
+      sourceIndex:
+        type: "number"
+        example: 1
+  NonMatchingWord:
+    type: "object"
+    properties:
+      match:
+        type: "string"
+        example: "Foenicians"
+      Levenshtein:
+        type: "number"
+        example: 3
+      AnswerIndex:
+        type: "number"
+        example: 1
+      percentage:
+        type: "string"
+        example: "51.85"
+
   ValidationError:
     type: "object"
     properties:
@@ -210,18 +240,6 @@ definitions:
           validationField:
             type: "string"
           validationMessage:
-            type: "string"
-  NotFoundError:
-    type: "object"
-    properties:
-      uniqueCode:
-        type: "string"
-      errorModel:
-        type: "object"
-        properties:
-          reason:
-            type: "string"
-          type:
             type: "string"
   MethodNotAllowedError:
     type: "object"
